--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    <!-- HAS TO LOAD FIRST -->
+
+    <!-- INCLUDES -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="js/bootstrap.js"></script>
- </head>
+
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+</head>
 
 <body>
-    <div class="alert alert-primary" role="alert">
-                <h4 class="alert-heading">Website under construction.</h4>
-                <p>I'm building this website right now. Check back later to see my portfolio.</p>
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <p class="display-4">Hoi! Mijn naam is Walter en ik studeer Software Engineering.</p>
+            <hr>
+            <div class="buttons">
+                    <button type="button" class="btn btn-info">Over Mij</button>
+                    <button type="button" class="btn btn-info">Projecten</button>
+                    <button type="button" class="btn btn-info">Competenties</button>    
+            </div>
+        </div>
     </div>
 </body>
 
