push dev branch

--- a/index.html
+++ b/index.html
@@ -24,12 +24,31 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <p class="display-4">Hoi! Mijn naam is Walter en ik studeer Software Engineering.</p>
-            <hr>
-            <div class="buttons">
-                    <button type="button" class="btn btn-info">Over Mij</button>
-                    <button type="button" class="btn btn-info">Projecten</button>
-                    <button type="button" class="btn btn-info">Competenties</button>    
+
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <p class="display-3">
+                    Projecten die ik heb gedaan.
+                </p>
             </div>
+            <div class="col-6">
+                <img src="img/projector-screen.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="fys">
+            <p class="display-3">
+                Fasten Your Seatbelts
+            </p>
+            <p class="display-4">
+                Applicatie voor verloren baggage inventariseren.
+            </p>
         </div>
     </div>
 </body>
