fixed image scaling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h4 class="subtext">Hoi! Mijn naam is Walter en ik studeer <span style="color: #027BFF">Software Engineering</span> aan de Hogeschool van Amsterdam.</h4>
             </div>
             <div class="col-md-6">
-                <img class="heroimage" src="img/kalter.png">
+                <img class="img-fluid heroimage" src="img/kalter.png">
             </div>
         </div>
 
@@ -40,7 +40,7 @@
             <div class="text-center title">Over mij.</div>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="img/mill.png">
+                    <img class="img-fluid" src="img/mill.png">
                 </div>
 
                 <div class="col-md-6">
@@ -61,7 +61,7 @@
 
             <div class="row project" id="fys">
                 <div class="col-md-8">
-                    <img src="img/Corendon_Airlines_logo_logotype.png">
+                    <img class="img-fluid" src="img/Corendon_Airlines_logo_logotype.png">
                 </div>
                 <div class="col-md-4">
                     <div><span class="align-middle">Het regelen en
@@ -73,11 +73,12 @@
 
             <div class="row project" >
                 <div class="col-md-6">
-                    <div class="text-center align-middle"><span class="align-middle">Een voorraad systeem voor restaurants, en een marktplaats voor leveranciers.</span></div>
+                    <div style="margin-top:160px;"></div>
+                    <span class="align-middle">Een voorraad systeem voor restaurants, en een marktplaats voor leveranciers.</span>
                 </div>
 
                 <div class="col-md-6">
-                    <img src="img/foodlocker.png">
+                    <img class="img-fluid"src="img/foodlocker.png">
                 </div>
             </div>
         </div>
@@ -124,7 +125,7 @@
 
                                     <hr>
 
-                                    <p>Bewijzen</p>
+                                    <p style="color: #FC5C65;">Bewijzen</p>
 
                                     <a href="#" class="card-link">Deze website</a>
                                     <a href="https://18eti09nieuwehorec.mxapps.io/" class="card-link">Mendix Project</a>
@@ -170,7 +171,7 @@
 
                                     <hr>
 
-                                    <p>Bewijzen</p>
+                                    <p style="color: #FC5C65;">Bewijzen</p>
 
                                     <a href="https://www.dropbox.com/s/iaxtpcnoi7z6yfv/Walter_Tesevic_500777672.pdf?dl=0" class="card-link">Research Skills</a>
                                     <a href="https://docs.google.com/document/d/1r3xon7es3li-TP0LHXmRDaG-OwHhx15u4dq8-zP25QE/edit?usp=sharing" class="card-link">Doelgroepanalyse Foodlocker</a>
@@ -214,7 +215,7 @@
 
                                     <hr>
 
-                                    <p>Bewijzen</p>
+                                    <p style="color: #FC5C65;">Bewijzen</p>
 
                                     <a href="#" class="card-link">Mendix Geleerd</a>
                                     <a href="#" class="card-link">Databases 2 Gehaald</a>
@@ -257,7 +258,7 @@
 
                                         <hr>
 
-                                        <p>Bewijzen</p>
+                                        <p style="color: #FC5C65;">Bewijzen</p>
 
                                         <a href="https://www.dropbox.com/s/t1bshhirxncd0jn/Comm%20skills%20presentatie.pptx?dl=0" class="card-link">Presentatie Communication Skills</a>
                                         <a href="https://docs.google.com/document/d/1v1YLr6lGFdGob7vjrWsQmwL5ukY9QF0HFfE7jPzSCK4/edit?usp=sharing" class="card-link">One-minute papers beroepsethiek</a>
@@ -299,7 +300,7 @@
 
                                         <hr>
 
-                                        <p>Bewijzen</p>
+                                        <p style="color: #FC5C65;">Bewijzen</p>
 
                                         <a href="https://www.dropbox.com/s/aa16r3x7xx8b2a1/4e%20revolutie%20powerpoint.pptx?dl=0" class="card-link">Presentatie</a>
                                         <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0" class="card-link">Reflectie</a>
@@ -342,7 +343,7 @@
 
                                         <hr>
 
-                                        <p>Bewijzen</p>
+                                        <p style="color: #FC5C65;">Bewijzen</p>
 
                                         <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0" class="card-link">Reflectie FYS</a>
                                         <a href="https://docs.google.com/document/d/1YGDcTsYzmRHG0_40F8R19vBrsq1R1TlLZPEcn6BSduQ/edit?usp=sharing" class="card-link">Samenwerkingscontract PAD</a>
@@ -355,6 +356,8 @@
                 </div>
             </div>
         </div>
+
+        <div></div>
 </body>
 
 </html>
