--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <div class="col-md-6">
                 <div class="display-4">Walter Tesevic.</div>
 
-                <h4 class="subtext">Hoi! Mijn naam is Walter en ik studeer <span style="color: #027BFF">Software Engineering</span> aan de Hogeschool van Amsterdam.</h4>
+                <h4 class="subtext">Hoi! Mijn naam is Walter en ik studeer <span style="color: #027BFF">Software
+                        Engineering</span> aan de Hogeschool van Amsterdam.</h4>
             </div>
             <div class="col-md-6">
                 <img class="img-fluid heroimage" src="img/kalter.png">
@@ -65,20 +66,21 @@
                 </div>
                 <div class="col-md-4">
                     <div><span class="align-middle">Het regelen en
-                        inventariseren van
-                        verloren baggage voor
-                        Corendon Airlines.</span></div>
+                            inventariseren van
+                            verloren baggage voor
+                            Corendon Airlines.</span></div>
                 </div>
             </div>
 
-            <div class="row project" >
+            <div class="row project">
                 <div class="col-md-6">
                     <div style="margin-top:160px;"></div>
-                    <span class="align-middle">Een voorraad systeem voor restaurants, en een marktplaats voor leveranciers.</span>
+                    <span class="align-middle">Een voorraad systeem voor restaurants, en een marktplaats voor
+                        leveranciers.</span>
                 </div>
 
                 <div class="col-md-6">
-                    <img class="img-fluid"src="img/foodlocker.png">
+                    <img class="img-fluid" src="img/foodlocker.png">
                 </div>
             </div>
         </div>
@@ -112,7 +114,8 @@
                                         <span class="fa fa-star "></span>
                                     </div>
 
-                                    <p class="text-center">Ik vind dat ik, wanneer ik een opdracht maak, professioneel te werk ga. Ik
+                                    <p class="text-center">Ik vind dat ik, wanneer ik een opdracht maak, professioneel
+                                        te werk ga. Ik
                                         raffel niet iets af als ik het kan helpen, en vind mijzelf ook te
                                         perfectionistisch. Dit kan ertoe leiden dat ik te veel tijd verlies aan kleine
                                         dingen die er niet echt toe doen. Om een voorbeeld te geven: Tijdens het
@@ -173,8 +176,10 @@
 
                                     <p style="color: #FC5C65;">Bewijzen</p>
 
-                                    <a href="https://www.dropbox.com/s/iaxtpcnoi7z6yfv/Walter_Tesevic_500777672.pdf?dl=0" class="card-link">Research Skills</a>
-                                    <a href="https://docs.google.com/document/d/1r3xon7es3li-TP0LHXmRDaG-OwHhx15u4dq8-zP25QE/edit?usp=sharing" class="card-link">Doelgroepanalyse Foodlocker</a>
+                                    <a href="https://www.dropbox.com/s/iaxtpcnoi7z6yfv/Walter_Tesevic_500777672.pdf?dl=0"
+                                        class="card-link">Research Skills</a>
+                                    <a href="https://docs.google.com/document/d/1r3xon7es3li-TP0LHXmRDaG-OwHhx15u4dq8-zP25QE/edit?usp=sharing"
+                                        class="card-link">Doelgroepanalyse Foodlocker</a>
                                 </div>
                             </div>
                         </div>
@@ -207,9 +212,9 @@
                                         hebben gemaakt. Ook bij andere vakken had ik het gevoel dat ik de stof goed tot
                                         me nam. Ik wilde vorig jaar naar de universiteit doe. Daar deed ik
                                         ontzettend mijn best om wiskunde te halen, die ik daarvoor nodig had. Dit is
-                                        mij niet gelukt maar ik heb wel ontzettend veel wiskunde kennis opgedaan. Op
-                                        school had ik databases 2 niet gehaald. Dit was jammer. Ik had geleerd van mijn
-                                        fouten en bij de herkansing had ik een mooie zeven.
+                                        mij niet gelukt maar ik heb wel ontzettend veel wiskunde kennis opgedaan. Dit
+                                        was jammer. Op school had ik databases 2 wel gehaald bij de herkansing, daar had ik had
+                                        geleerd van mijn fouten en bij de herkansing had ik een mooie zeven.
                                         Daarom geef ik mijzelf een 3.
                                     </p>
 
@@ -260,8 +265,10 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/t1bshhirxncd0jn/Comm%20skills%20presentatie.pptx?dl=0" class="card-link">Presentatie Communication Skills</a>
-                                        <a href="https://docs.google.com/document/d/1v1YLr6lGFdGob7vjrWsQmwL5ukY9QF0HFfE7jPzSCK4/edit?usp=sharing" class="card-link">One-minute papers beroepsethiek</a>
+                                        <a href="https://www.dropbox.com/s/t1bshhirxncd0jn/Comm%20skills%20presentatie.pptx?dl=0"
+                                            class="card-link">Presentatie Communication Skills</a>
+                                        <a href="https://docs.google.com/document/d/1v1YLr6lGFdGob7vjrWsQmwL5ukY9QF0HFfE7jPzSCK4/edit?usp=sharing"
+                                            class="card-link">One-minute papers beroepsethiek</a>
                                     </div>
                                 </div>
                             </div>
@@ -302,8 +309,10 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/aa16r3x7xx8b2a1/4e%20revolutie%20powerpoint.pptx?dl=0" class="card-link">Presentatie</a>
-                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0" class="card-link">Reflectie</a>
+                                        <a href="https://www.dropbox.com/s/aa16r3x7xx8b2a1/4e%20revolutie%20powerpoint.pptx?dl=0"
+                                            class="card-link">Presentatie</a>
+                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
+                                            class="card-link">Reflectie</a>
                                     </div>
                                 </div>
                             </div>
@@ -345,8 +354,10 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0" class="card-link">Reflectie FYS</a>
-                                        <a href="https://docs.google.com/document/d/1YGDcTsYzmRHG0_40F8R19vBrsq1R1TlLZPEcn6BSduQ/edit?usp=sharing" class="card-link">Samenwerkingscontract PAD</a>
+                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
+                                            class="card-link">Reflectie FYS</a>
+                                        <a href="https://docs.google.com/document/d/1YGDcTsYzmRHG0_40F8R19vBrsq1R1TlLZPEcn6BSduQ/edit?usp=sharing"
+                                            class="card-link">Samenwerkingscontract PAD</a>
                                     </div>
                                 </div>
                             </div>
