--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
         <div class="row">
             <div class="col-md-6">
-                <div class="display-4">Walter Tesevic.</div>
+                <div class="display-4">Walter Tesevic</div>
 
-                <h4 class="subtext">Hoi! Mijn naam is Walter en ik studeer <span style="color: #027BFF">Software Engineering</span> aan de Hogeschool van Amsterdam.</h4>
+                <h4 class="subtext">Hoi! Mijn naam is Walter en ik studeer <span style="color: #027BFF">Software
+                        Engineering</span> aan de Hogeschool van Amsterdam.</h4>
             </div>
             <div class="col-md-6">
                 <img class="img-fluid heroimage" src="img/kalter.png">
@@ -44,7 +45,8 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="text-center align-middle">
+                    <div style="margin-top:30px;"></div>
+                    <div style="color: #A3AAAE;">
                         Ik ben een 20-jarige student die in Amsterdam woont. Ik ben iemand die ervan houdt om een
                         uitdaging aan te gaan, en die ervan houdt om nieuwe dingen te leren.
                         Wat mij klaar maakt voor de basisfase is mijn leergierigheid en mijn doorzettingsvermogen.
@@ -57,7 +59,7 @@
 
         <!-- PROJECTS -->
         <div class="projects">
-            <div class="text-center title">Projecten</div>
+            <div class="text-center title">Projecten.</div>
 
             <div class="row project" id="fys">
                 <div class="col-md-8">
@@ -65,20 +67,21 @@
                 </div>
                 <div class="col-md-4">
                     <div><span class="align-middle">Het regelen en
-                        inventariseren van
-                        verloren baggage voor
-                        Corendon Airlines.</span></div>
+                            inventariseren van
+                            verloren baggage voor
+                            Corendon Airlines.</span></div>
                 </div>
             </div>
 
-            <div class="row project" >
+            <div class="row project">
                 <div class="col-md-6">
                     <div style="margin-top:160px;"></div>
-                    <span class="align-middle">Een voorraad systeem voor restaurants, en een marktplaats voor leveranciers.</span>
+                    <span class="align-middle">Een voorraad systeem voor restaurants, en een marktplaats voor
+                        leveranciers.</span>
                 </div>
 
                 <div class="col-md-6">
-                    <img class="img-fluid"src="img/foodlocker.png">
+                    <img class="img-fluid" src="img/foodlocker.png">
                 </div>
             </div>
         </div>
@@ -112,7 +115,8 @@
                                         <span class="fa fa-star "></span>
                                     </div>
 
-                                    <p class="text-center">Ik vind dat ik, wanneer ik een opdracht maak, professioneel te werk ga. Ik
+                                    <p class="text-center">Ik vind dat ik, wanneer ik een opdracht maak, professioneel
+                                        te werk ga. Ik
                                         raffel niet iets af als ik het kan helpen, en vind mijzelf ook te
                                         perfectionistisch. Dit kan ertoe leiden dat ik te veel tijd verlies aan kleine
                                         dingen die er niet echt toe doen. Om een voorbeeld te geven: Tijdens het
@@ -163,7 +167,7 @@
                                         schrijven. Ik besefte dat het best moeilijk was om verschillende bronnen bij
                                         elkaar te brengen en daar dan een conclusie of een samenhang uit te trekken. Ik
                                         heb ontzettend lang onderzocht en geschreven, dat toe leidde dat ik toch een
-                                        goed cijfer voor het vak heb gekregen. Toch geef mijzelf een 2 voor deze
+                                        goed cijfer voor het vak heb gekregen. Toch geef ik mijzelf een 2 voor deze
                                         competentie omdat ik toch vind dat ik het sneller heb kunnen doen, en hier toch
                                         in wil ontwikkelen. Daarom heb ik ook een PSP-vak gekozen die met schrijven te
                                         maken heeft, Communicating Like A Pro.
@@ -173,8 +177,10 @@
 
                                     <p style="color: #FC5C65;">Bewijzen</p>
 
-                                    <a href="https://www.dropbox.com/s/iaxtpcnoi7z6yfv/Walter_Tesevic_500777672.pdf?dl=0" class="card-link">Research Skills</a>
-                                    <a href="https://docs.google.com/document/d/1r3xon7es3li-TP0LHXmRDaG-OwHhx15u4dq8-zP25QE/edit?usp=sharing" class="card-link">Doelgroepanalyse Foodlocker</a>
+                                    <a href="https://www.dropbox.com/s/iaxtpcnoi7z6yfv/Walter_Tesevic_500777672.pdf?dl=0"
+                                        class="card-link">Research Skills</a>
+                                    <a href="https://docs.google.com/document/d/1r3xon7es3li-TP0LHXmRDaG-OwHhx15u4dq8-zP25QE/edit?usp=sharing"
+                                        class="card-link">Doelgroepanalyse Foodlocker</a>
                                 </div>
                             </div>
                         </div>
@@ -207,9 +213,9 @@
                                         hebben gemaakt. Ook bij andere vakken had ik het gevoel dat ik de stof goed tot
                                         me nam. Ik wilde vorig jaar naar de universiteit doe. Daar deed ik
                                         ontzettend mijn best om wiskunde te halen, die ik daarvoor nodig had. Dit is
-                                        mij niet gelukt maar ik heb wel ontzettend veel wiskunde kennis opgedaan. Op
-                                        school had ik databases 2 niet gehaald. Dit was jammer. Ik had geleerd van mijn
-                                        fouten en bij de herkansing had ik een mooie zeven.
+                                        mij niet gelukt maar ik heb wel ontzettend veel wiskunde kennis opgedaan. Dit
+                                        was jammer. Op school had ik databases 2 wel gehaald bij de herkansing, daar had ik had
+                                        geleerd van mijn fouten en bij de herkansing had ik een mooie zeven.
                                         Daarom geef ik mijzelf een 3.
                                     </p>
 
@@ -260,8 +266,10 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/t1bshhirxncd0jn/Comm%20skills%20presentatie.pptx?dl=0" class="card-link">Presentatie Communication Skills</a>
-                                        <a href="https://docs.google.com/document/d/1v1YLr6lGFdGob7vjrWsQmwL5ukY9QF0HFfE7jPzSCK4/edit?usp=sharing" class="card-link">One-minute papers beroepsethiek</a>
+                                        <a href="https://www.dropbox.com/s/t1bshhirxncd0jn/Comm%20skills%20presentatie.pptx?dl=0"
+                                            class="card-link">Presentatie Communication Skills</a>
+                                        <a href="https://docs.google.com/document/d/1v1YLr6lGFdGob7vjrWsQmwL5ukY9QF0HFfE7jPzSCK4/edit?usp=sharing"
+                                            class="card-link">One-minute papers beroepsethiek</a>
                                     </div>
                                 </div>
                             </div>
@@ -302,8 +310,10 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/aa16r3x7xx8b2a1/4e%20revolutie%20powerpoint.pptx?dl=0" class="card-link">Presentatie</a>
-                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0" class="card-link">Reflectie</a>
+                                        <a href="https://www.dropbox.com/s/aa16r3x7xx8b2a1/4e%20revolutie%20powerpoint.pptx?dl=0"
+                                            class="card-link">Presentatie</a>
+                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
+                                            class="card-link">Reflectie</a>
                                     </div>
                                 </div>
                             </div>
@@ -345,8 +355,10 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0" class="card-link">Reflectie FYS</a>
-                                        <a href="https://docs.google.com/document/d/1YGDcTsYzmRHG0_40F8R19vBrsq1R1TlLZPEcn6BSduQ/edit?usp=sharing" class="card-link">Samenwerkingscontract PAD</a>
+                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
+                                            class="card-link">Reflectie FYS</a>
+                                        <a href="https://docs.google.com/document/d/1YGDcTsYzmRHG0_40F8R19vBrsq1R1TlLZPEcn6BSduQ/edit?usp=sharing"
+                                            class="card-link">Samenwerkingscontract PAD</a>
                                     </div>
                                 </div>
                             </div>
