--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <div style="margin-top:30px;"></div>
                     <div style="color: #A3AAAE;">
                         Ik ben een 20-jarige student die in Amsterdam woont. Ik ben iemand die ervan houdt om een
-                        uitdaging aan te gaan, en die ervan houdt om nieuwe dingen te leren.
-                        Wat mij klaar maakt voor de basisfase is mijn leergierigheid en mijn doorzettingsvermogen.
+                        <span style="color: #027BFF">uitdaging aan te gaan, en die ervan houdt om nieuwe dingen te leren.</span>
+                        Wat mij klaar maakt voor de basisfase is mijn <span style="color: #027BFF">leergierigheid</span> en mijn <span style="color: #027BFF">doorzettingsvermogen</span>.
                     </div>
                 </div>
             </div>
