--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
                         Ik ben een 20-jarige student die in Amsterdam woont. Ik ben iemand die ervan houdt om een
                         <span style="color: #027BFF">uitdaging aan te gaan</span>, en die ervan houdt om <span style="color: #027BFF">nieuwe
                             dingen te leren</span>.
-                        Wat mij klaar maakt voor de basisfase is mijn <span style="color: #027BFF">leergierigheid</span>
-                        en mijn <span style="color: #027BFF">doorzettingsvermogen</span>.
                     </div>
                 </div>
             </div>
@@ -389,13 +387,13 @@
                 <div class="col-md-6 ">
                     <div style="margin-top:30px;"></div>
                     <div class="answer">
-                        Wat mij geschikt maakt om door te gaan naar de verdiepingsfase is mijn gedreefenheid om nieuwe
-                        technologieen te leren, en mijn werkwijze die ik heb in elke opdracht en project die ik doe. Ik
+                        Wat mij geschikt maakt om door te gaan naar de verdiepingsfase is mijn gedreevenheid om nieuwe
+                        technologieën te leren en mijn werkwijze die ik heb in elke opdracht elk project. Ik
                         houd ervan om nieuwe dingen te leren, en die dan toe te passen om er een project van te maken.
                         Zo onderzoek ik in mijn vrije tijd nieuwe techonologieen om te leren, die ik nodig ga hebben in
-                        de toekomst, en die ik interesant vindt. Tijdens het eerste jaar van de studie heb ik veel met
+                        de toekomst en die ik interesant vind. Tijdens het eerste jaar van de studie heb ik veel met
                         projecten en mensen te maken gekregen. Ik heb hier een goed idee gekregen van wat er van je
-                        verwacht wordt om een Software Engineer te zijn, en ik wil dit nu gaan toepassen tijdens mijn
+                        verwacht wordt om een Software Engineer te zijn en ik wil dit nu gaan toepassen tijdens mijn
                         stage.
                     </div>
                 </div>
@@ -413,11 +411,11 @@
                     <div style="margin-top:30px;"></div>
                     <div class="answer">
                         Ik heb er altijd al van gehouden om programma's te programmeren. Ik denk dat die hobby heel
-                        handig is om een goede ICT'er te worden, alleen al omdat je dan automatisch meer bezig bent met
-                        de technologieen, talen en frameworks die nodig zijn om die applicaties tot leven te maken.
-                        Iets waar ik heel goed in ben is op detailles letten, noem het maar een soort van OCD. Ik vind
-                        altijd dat een product er strak uit moet zien maar vooral snel moet werken, en daarom denk ik
-                        dat ik een goede ICT'er ben.
+                        handig is om een goede ICT-er te worden, alleen al omdat je dan automatisch meer bezig bent met
+                        de technologieen, talen en frameworks die nodig zijn om die applicaties tot leven te brengen.
+                        Iets waar ik heel goed in ben is op details letten, noem het maar een soort van OCD. Ik vind
+                        altijd dat een product er strak uit moet zien maar vooral snel moet werken en daarom denk ik
+                        dat ik een goede ICT-er ben.
                     </div>
                 </div>
             </div>
@@ -425,7 +423,7 @@
             <!-- Hoe ga ik verder werken aan mijn competencies? -->
             <div class="row">
                 <div class="col-md-6">
-                    <div class="display-4">Hoe ga ik verder werken aan het ontwikkelen van mijn <span style="color: #FC5C65;">competencies</span>?</div>
+                    <div class="display-4">Hoe ga ik verder werken aan het ontwikkelen van mijn <span style="color: #FC5C65;">competenties</span>?</div>
                     
                 </div>
 
@@ -433,11 +431,11 @@
                     <div style="margin-top:30px;"></div>
                     <div class="answer">
                         Ik wil tijdens mijn stage mijn competencies ontwikkelen. De competencies die ik vooral wil gaan
-                        ontwikkelen zijn: Communicatief Skills, en Samenwerken. Ik wil communication skills ontwikkelen
-                        omdat ik altijd heb gevonden dat ik niet goed ben in presenteren, vaak kom ik niet goed uit
+                        ontwikkelen zijn: communicatief vermogen, en samenwerken. Ik wil communicatief vermogen ontwikkelen
+                        omdat ik altijd heb gevonden dat ik niet goed ben in presenteren. Vaak kom ik niet goed uit
                         mijn woorden en weet ik niet wat ik moet zeggen. Samenwerken wil ik ontwikkelen omdat ik graag
-                        liever op mezelf werk. Ik vind op die manier werken veel chiller, dit komt omdat ik mij snel
-                        afleid rond andere mensen en onbewust hun afleid. Ik wil mijn communication skills gaan
+                        liever individueel werk. Ik vind op deze manier werken veel chiller, dit komt omdat ik mij snel
+                        afleid rond andere mensen en onbewust hen afleid. Ik wil mijn communicatief vermogen gaan
                         ontwikkelen door een presentatie te houden (liefst tijdens mijn stage) en mijn samenwerken te
                         ontwikkelen door bewust te zijn van het feit dat ik snel afgeleid wordt en dat ook te zeggen
                         aan mijn collega's.
@@ -460,7 +458,7 @@
                 </div>
                 <div class="col-md-6 socialmedia text-center">
                     <ul>
-                        <a href="#"><img src="img/linkedin.png"></a>
+                        <a href="https://www.linkedin.com/in/walter-tesevic-a26762171/"><img src="img/linkedin.png"></a>
                     </ul>
                 </div>
             </div>
