fixed more spelling errors

--- a/index.html
+++ b/index.html
@@ -381,7 +381,6 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="display-4">Wat maakt mij geschikt voor de <span style="color: #FC5C65;">verdiepingsfase</span>?</div>
-                    
                 </div>
 
                 <div class="col-md-6 ">
@@ -390,8 +389,8 @@
                         Wat mij geschikt maakt om door te gaan naar de verdiepingsfase is mijn gedreevenheid om nieuwe
                         technologieën te leren en mijn werkwijze die ik heb in elke opdracht elk project. Ik
                         houd ervan om nieuwe dingen te leren, en die dan toe te passen om er een project van te maken.
-                        Zo onderzoek ik in mijn vrije tijd nieuwe techonologieen om te leren, die ik nodig ga hebben in
-                        de toekomst en die ik interesant vind. Tijdens het eerste jaar van de studie heb ik veel met
+                        Zo onderzoek ik in mijn vrije tijd nieuwe technologieën die ik nodig ga hebben in
+                        de toekomst en die ik interessant vind. Tijdens het eerste jaar van de studie heb ik veel met
                         projecten en mensen te maken gekregen. Ik heb hier een goed idee gekregen van wat er van je
                         verwacht wordt om een Software Engineer te zijn en ik wil dit nu gaan toepassen tijdens mijn
                         stage.
