--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="display-4 herotext">Walter <span style="color: #FC5C65;">Tesevic</span></div>
 
                 <h4 class="subtext">Hoi! Mijn naam is Walter en ik studeer <span style="color: #027BFF">Software
-                        Engineering</span> aan de Hogeschool van Amsterdam.<br><br><br><div class="title text-center"><span style="color: #FC5C65;"><a target="_blank"href="res/CV_WalterTesevicNL.pdf">CV</a></span> | <span style="color: #FC5C65;"> <a target="_blank"href="https://www.dropbox.com/s/7u8gykavbwerinh/cop%20Walter%20Tesevic.docx?dl=0">COP</a></span></div></h4>
+                        Engineering</span> aan de Hogeschool van Amsterdam.<br><br><br><div class="title text-center"><span style="color: #FC5C65;"><a target="_blank"target="_blank"href="res/CV_WalterTesevicNL.pdf">CV</a></span> | <span style="color: #FC5C65;"> <a target="_blank"target="_blank"href="https://www.dropbox.com/s/7u8gykavbwerinh/cop%20Walter%20Tesevic.docx?dl=0">COP</a></span></div></h4>
 
                                 
             </div>
@@ -134,9 +134,9 @@
 
                                     <p style="color: #FC5C65;">Bewijzen</p>
 
-                                    <a target="_blank"href="#" class="card-link">Deze website</a>
-                                    <a target="_blank"href="https://18eti09nieuwehorec.mxapps.io/" class="card-link">Mendix Project</a>
-                                    <a target="_blank"href="#fys" class="card-link">Project FYS</a>
+                                    <a target="_blank"target="_blank"href="#" class="card-link">Deze website</a>
+                                    <a target="_blank"target="_blank"href="https://18eti09nieuwehorec.mxapps.io/" class="card-link">Mendix Project</a>
+                                    <a target="_blank"target="_blank"href="#fys" class="card-link">Project FYS</a>
                                 </div>
                             </div>
                         </div>
@@ -180,9 +180,9 @@
 
                                     <p style="color: #FC5C65;">Bewijzen</p>
 
-                                    <a target="_blank"href="https://www.dropbox.com/s/iaxtpcnoi7z6yfv/Walter_Tesevic_500777672.pdf?dl=0"
+                                    <a target="_blank"target="_blank"href="https://www.dropbox.com/s/iaxtpcnoi7z6yfv/Walter_Tesevic_500777672.pdf?dl=0"
                                         class="card-link">Research Skills</a>
-                                    <a href="https://docs.google.com/document/d/1r3xon7es3li-TP0LHXmRDaG-OwHhx15u4dq8-zP25QE/edit?usp=sharing"
+                                    <a target="_blank"href="https://docs.google.com/document/d/1r3xon7es3li-TP0LHXmRDaG-OwHhx15u4dq8-zP25QE/edit?usp=sharing"
                                         class="card-link">Doelgroepanalyse Foodlocker</a>
                                 </div>
                             </div>
@@ -227,9 +227,9 @@
 
                                     <p style="color: #FC5C65;">Bewijzen</p>
 
-                                    <a href="img/mendix.png" class="card-link">Mendix Geleerd</a>
-                                    <a href="img/programming10.png" class="card-link">Programming Cijfer</a>
-                                    <a href="img/databases2.png" class="card-link">Databases 2 Gehaald</a>
+                                    <a target="_blank"href="img/mendix.png" class="card-link">Mendix Geleerd</a>
+                                    <a target="_blank"href="img/programming10.png" class="card-link">Programming Cijfer</a>
+                                    <a target="_blank"href="img/databases2.png" class="card-link">Databases 2 Herkanst</a>
                                     
                                 </div>
                             </div>
@@ -271,9 +271,9 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/t1bshhirxncd0jn/Comm%20skills%20presentatie.pptx?dl=0"
+                                        <a target="_blank"href="https://www.dropbox.com/s/t1bshhirxncd0jn/Comm%20skills%20presentatie.pptx?dl=0"
                                             class="card-link">Presentatie Communication Skills</a>
-                                        <a href="https://docs.google.com/document/d/1v1YLr6lGFdGob7vjrWsQmwL5ukY9QF0HFfE7jPzSCK4/edit?usp=sharing"
+                                        <a target="_blank"href="https://docs.google.com/document/d/1v1YLr6lGFdGob7vjrWsQmwL5ukY9QF0HFfE7jPzSCK4/edit?usp=sharing"
                                             class="card-link">One-minute papers beroepsethiek</a>
                                     </div>
                                 </div>
@@ -315,9 +315,9 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/aa16r3x7xx8b2a1/4e%20revolutie%20powerpoint.pptx?dl=0"
+                                        <a target="_blank"href="https://www.dropbox.com/s/aa16r3x7xx8b2a1/4e%20revolutie%20powerpoint.pptx?dl=0"
                                             class="card-link">Presentatie</a>
-                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
+                                        <a target="_blank"href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
                                             class="card-link">Reflectie</a>
                                     </div>
                                 </div>
@@ -360,9 +360,9 @@
 
                                         <p style="color: #FC5C65;">Bewijzen</p>
 
-                                        <a href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
+                                        <a target="_blank"href="https://www.dropbox.com/s/aql19e4zcsymlaz/reflectieverslag%20walter%20tesevic.docx?dl=0"
                                             class="card-link">Reflectie FYS</a>
-                                        <a href="https://docs.google.com/document/d/1YGDcTsYzmRHG0_40F8R19vBrsq1R1TlLZPEcn6BSduQ/edit?usp=sharing"
+                                        <a target="_blank"href="https://docs.google.com/document/d/1YGDcTsYzmRHG0_40F8R19vBrsq1R1TlLZPEcn6BSduQ/edit?usp=sharing"
                                             class="card-link">Samenwerkingscontract PAD</a>
                                     </div>
                                 </div>
@@ -461,7 +461,7 @@
                 </div>
                 <div class="col-md-6 socialmedia text-center">
                     <ul>
-                        <a href="https://www.linkedin.com/in/walter-tesevic-a26762171/"><img src="img/linkedin.png"></a>
+                        <a target="_blank"href="https://www.linkedin.com/in/walter-tesevic-a26762171/"><img src="img/linkedin.png"></a>
                     </ul>
                 </div>
             </div>
