--- a/index.html
+++ b/index.html
@@ -455,15 +455,18 @@
     </div>
 
 
-    <div class="container-fluid">
+    <div class="container">
         <footer>
             <div class="row">
                 <div class="col-md-6">
                     <div class="text-center">Walter Tesevic © 2018</div>
                 </div>
-                <div class="col-md-6 socialmedia text-center">
+                <div class="col-md-6 text-center socialmedia">
                     <ul>
-                        <a target="_blank"href="https://www.linkedin.com/in/walter-tesevic-a26762171/"><img src="img/linkedin.png"></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/walter-tesevic-a26762171/" class="fa fa-linkedin"></a>
+                        <a target="_blank" href="https://github.com/iamwalter" class="fa fa-github"></a>
+                        <a target="_blank" href="https://www.facebook.com/wtesevic" class="fa fa-facebook"></a>
+                        <a target="_blank" href="https://www.instagram.com/waltertesevic/" class="fa fa-instagram"></a>
                     </ul>
                 </div>
             </div>
