force cache reset

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css?v=1.0">
     <script src="js/bootstrap.js"></script>
 
     <!-- FONTS -->
