removed cop link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                 <div class="display-4 herotext">Walter <span style="color: #FC5C65;">Tesevic</span></div>
 
                 <h4 class="subtext">Hoi! Mijn naam is Walter en ik studeer <span style="color: #027BFF">Software
-                        Engineering</span> aan de Hogeschool van Amsterdam.<br><br><br><div class="title text-center"><span style="color: #FC5C65;"><a target="_blank"target="_blank"href="res/CV_WalterTesevicNL.pdf">CV</a></span> | <span style="color: #FC5C65;"> <a target="_blank"target="_blank"href="https://www.dropbox.com/s/7u8gykavbwerinh/cop%20Walter%20Tesevic.docx?dl=0">COP</a></span></div></h4>
+                        Engineering</span> aan de Hogeschool van Amsterdam.<br><br><br><div class="title text-center"><span style="color: #FC5C65;"><a target="_blank"target="_blank"href="res/CV_WalterTesevicNL.pdf">CV</a></span> 
+                            <!--| <span style="color: #FC5C65;"> <a target="_blank"target="_blank"href="https://www.dropbox.com/s/7u8gykavbwerinh/cop%20Walter%20Tesevic.docx?dl=0">COP</a></span> -->
+                            </div></h4> 
+
 
                                 
             </div>
@@ -428,7 +431,6 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="display-4">Hoe ga ik verder werken aan het ontwikkelen van mijn <span style="color: #FC5C65;">competenties</span>?</div>
-                    
                 </div>
 
                 <div class="col-md-6 ">
