removed facebook and instagram link

--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
                     <ul>
                         <a target="_blank" href="https://www.linkedin.com/in/walter-tesevic-a26762171/" class="fa fa-linkedin"></a>
                         <a target="_blank" href="https://github.com/iamwalter" class="fa fa-github"></a>
-                        <a target="_blank" href="https://www.facebook.com/wtesevic" class="fa fa-facebook"></a>
-                        <a target="_blank" href="https://www.instagram.com/waltertesevic/" class="fa fa-instagram"></a>
+                        <!--<a target="_blank" href="https://www.facebook.com/wtesevic" class="fa fa-facebook"></a>
+                        <a target="_blank" href="https://www.instagram.com/waltertesevic/" class="fa fa-instagram"></a> -->
                     </ul>
                 </div>
             </div>
